2005-08-30  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-games, evince have branched.

2005-08-29  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: epiphany has branched.

2005-08-28  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: glib, gtk+ have branched.

2005-08-20  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-volume-manager has branched.

2005-08-05  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gedit has branched for 2.10.

2005-08-04  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: dasher has been branched.

2005-08-04  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gdm2 has branched for gnome-2-12.

2005-07-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gimp-tiny-fu.

2005-07-27  Danilo Šegan  <danilo@gnome.org>

	Final modules decision for Gnome 2.12.
	
	* translation-status.xml: Comment out "proposed" group.
	evince and gnome-keyring-manager are in desktop now. 
	gpdf and ggv move into HEAD/extras from 2.12/desktop.
	libgnomecups, eggcups back to HEAD/extras.

2005-07-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved evince to proposed.

2005-07-13  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: Removed gnome-mime-data from 2.12.

2005-07-13  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gtksourceview has branched.

2005-07-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-power-manager.

2005-07-11  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: metacity has branched.

2005-07-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added proposed group with the proposed
	modules from
	http://live.gnome.org/ReleasePlanning/TwoPointEleven/Desktop.

2005-07-06  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-terminal has branched for 2.10.
