@@ -448,7 +448,7 @@
       <component name="evolution" dir="evolution" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-2.4.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -479,7 +479,7 @@
       <component name="evolution-data-server" dir="evolution-data-server" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-data-server-1.4.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -499,7 +499,7 @@
       <component name="evolution-exchange" dir="evolution-exchange" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-exchange-2.4.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -2995,7 +2995,7 @@
       <component name="zenity" dir="zenity" group="desktop">
         <podir dir="po"/>
         <potname name="zenity-0.1.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
