@@ -1,3 +1,8 @@
+2005-09-02  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: evolution-exchange, evolution, zenity,
+	evolution-data-server. 
+
 2005-08-30  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: gnome-games, evince have branched.
